# vpn

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .tool-versions  Makefile  PROJECT_PROGRESS.md  README.md  compose.yaml
.github/: dependabot.yml
.github/workflows/: admin.yml  compose.yml  dependency-review.yml  flutter.yml  python.yml  security.yml
apps/admin/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/mobile/: README.md  (+2 more)
docs/: architecture.md  decisions-needed.md  development.md  environment.md  phase-1-plan.md  protocol-roadmap.md  repository-assessment.md  threat-model.md
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260720_0001_protocol-neutral.py  20260720_0002_reviewed.py  20260720_0003_operations.py
services/api/src/nebula_api/: __init__.py  cli.py  identity.py  main.py  passwords.py  seed_admin.py  settings.py
services/api/src/nebula_api/db/: __init__.py  base.py  engine.py  schema.py
services/api/src/nebula_api/models/: __init__.py  approval.py  identity.py  operations.py  provisioning.py  topology.py  types.py
services/api/tests/: test_approval_models.py  test_cli.py  test_database_engine.py  test_database_schema.py  test_identity_models.py  test_identity_normalization.py  test_main.py  test_migrations_static.py  test_operations_models.py  test_passwords_argon2.py  test_provisioning_models.py  test_seed_admin.py  test_settings.py  test_topology_models.py
(+26 files in other folders)
