[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "nebula-api"
version = "0.1.0"
description = "Nebula VPN unprivileged control-plane API"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic==1.18.5",
  "argon2-cffi==25.1.0",
  "email-validator==2.3.0",
  "fastapi==0.139.2",
  "pydantic-settings==2.14.2",
  "psycopg[binary]==3.3.4",
  "sqlalchemy[asyncio]==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[project.scripts]
nebula-api = "nebula_api.cli:main"

[project.optional-dependencies]
dev = [
  "hypothesis==6.157.1",
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pip-audit==2.10.1",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nebula_api"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=nebula_api --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
